Adicionado funcionalidade dos botões total, adicionar

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -200,6 +200,7 @@
         android:layout_width="wrap_content"
         android:layout_height="48dp"
         android:layout_marginTop="32dp"
+        android:onClick="adicionar"
         android:text="Adicionar"
         app:layout_constraintEnd_toStartOf="@+id/buttonApagar"
         app:layout_constraintHorizontal_bias="0.5"
@@ -221,6 +222,7 @@
         android:id="@+id/buttonTotal"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
+        android:onClick="total"
         android:text="Total"
         app:layout_constraintBottom_toBottomOf="@+id/buttonApagar"
         app:layout_constraintEnd_toEndOf="parent"
